# VK-takehome

./: .coveragerc  .gitignore  AI_USAGE.md  ARCHITECTURE.md  DECISIONS.md  DOCKER.md  Dockerfile  Makefile  README.md  REQUIREMENTS.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: config.docker.yaml  config.yaml
docker/: .dockerignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml
docs/: ARCHITECTURE_FULL.md  DECISIONS_FULL.md
src/fetcher/: __init__.py  async_fetcher.py  circuit_breaker.py  http_client.py  rate_limiter.py  retry_handler.py
src/mock_servers/: __init__.py  app.py
src/models/: __init__.py  config.py  data_models.py
src/monitoring/: __init__.py  logger.py
src/pipeline/: main.py  orchestrator.py  output.py
src/processor/: __init__.py  aggregator.py  normalizer.py  processor.py
tests/: conftest.py  test_performance.py
tests/fixtures/: sample_data.py
tests/integration/: test_async_fetcher_e2e.py  test_full_pipeline.py  test_mock_coordination.py  test_pipeline_e2e.py  test_real_e2e.py
tests/unit/: test_aggregator.py  test_async_fetcher_errors.py  test_circuit_breaker.py  test_cli.py  test_config.py  test_http_client.py  test_mock_servers.py  test_orchestrator.py  test_output_formatter.py  test_processor.py  test_rate_limiter.py  test_rate_limiter_deterministic.py  test_rate_limiter_requirements.py  test_retry_handler.py
